fixed z-index

--- a/css/styles.css
+++ b/css/styles.css
@@ -521,7 +521,6 @@ html.is-animating .transition-fade {
     bottom: 0;
     left: 0;
     right: 0;
-    z-index: 9999;
 }
 
 .dots-container span {
